--- a/java-methodoverloading.html
+++ b/java-methodoverloading.html
@@ -42,7 +42,6 @@
             <h2>JAVA</h2>
             <a href="java-basic.html">Java Basic</a>
             <a href="java-control-statement.html">Java Control Statements</a>
-            <a href="java-objectclass.html">Java OOPs Concepts</a>
             <a href="java-inheritance.html">Java Inheritance</a>
             <a href="java-methodoverloading.html">Java Overloading</a>
             <a href="java-abstract.html">Java Abstraction</a>
@@ -59,30 +58,24 @@
         <div class="main">
         <h2>Java Overloading</h2>
 
-        <h1 class="h1">Method Overloading in Java</h1>
+        <h1 class="h1">Method Overloading in Java</h1><br>
 <p>If a class has multiple methods having same name but different in parameters, it is known as <strong>Method Overloading</strong>.
 </p>
 <p>If we have to perform only one operation, having same name of the methods increases the readability of the program. </p>
 <p>Suppose you have to perform addition of the given numbers but there can be any number of arguments, if you write the method such as a(int,int) for two parameters, and b(int,int,int) for three parameters then it may be difficult for you as well as other programmers to understand the behavior of the method because its name differs. </p>
 <p>So, we perform method overloading to figure out the program quickly.</p>
-<img src="https://static.javatpoint.com/images/overload1.jpg" alt="java method overloading" width="250" height="200" style="float:right;" />
-<h2 class="h4">Advantage of method overloading</h2>
+<h2 class="h4">Advantage of method overloading</h2><br>
 <p>Method overloading <em>increases the readability of the program</em>.</p>
-<a id="monumberofways"></a>
 <h3 class="h4">Different ways to overload the method</h3>
 <p>There are two ways to overload the method in java</p>
-<ol class="points">
+<ol>
 <li>By changing number of arguments</li>
 <li>By changing the data type</li>
 </ol>
 <h4 class="n">In Java, Method Overloading is not possible by changing the return type of the method only.</h4>
 <hr/>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-<ins class="adsbygoogle cm_jtp_wtc_responsive" style="display:inline-block" data-ad-client="ca-pub-4699858549023382" data-ad-slot="6746133113"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<br>
 <a id="mobynumber"></a>
 <h3 class="h3ex">1) Method Overloading: changing no. of arguments</h3>
 <p>In this example, we have created two methods, first add() method performs addition of two numbers and second add method performs addition of three numbers.</p>
@@ -159,9 +152,8 @@ public static void main(){System.out.println("main without args");}
 main with String[]
 </pre></div>
 <a id="motypepromotion"></a>
-<h2 class="h2">Method Overloading and Type Promotion</h2>
+<h2 class="h2">Method Overloading and Type Promotion</h2><br>
 <p>One type is promoted to another implicitly if no matching datatype is found. Let's understand the concept by the figure given below:</p>
-<img src="https://static.javatpoint.com/images/java-type-promotion.png" alt="Java Method Overloading with Type Promotion" />
 <p>As displayed in the above diagram, byte can be promoted to short, int, long, float or double. The short datatype can be promoted to int, long, float or double. The char datatype can be promoted to int,long,float or double and so on.</p>
 <h3 class="h3ex">Example of Method Overloading with TypePromotion</h3>
 <div class="codeblock"><textarea name="code" class="java">
