--- a/java-multithreding.html
+++ b/java-multithreding.html
@@ -42,7 +42,6 @@
             <h2>JAVA</h2>
             <a href="java-basic.html">Java Basic</a>
             <a href="java-control-statement.html">Java Control Statements</a>
-            <a href="java-objectclass.html">Java OOPs Concepts</a>
             <a href="java-inheritance.html">Java Inheritance</a>
             <a href="java-methodoverloading.html">Java Overloading</a>
             <a href="java-abstract.html">Java Abstraction</a>
@@ -57,7 +56,7 @@
         </div>
         
         <div class="main">
-        <h2>Java Basic</h2>
+        <h2>Java Multithreading</h2>
 
         <h1 class="h1">Multithreading in Java</h1>
 <p><strong>Multithreading in Java</strong> is a process of executing multiple threads simultaneously.</p>
@@ -65,32 +64,26 @@
 <p>However, we use multithreading than multiprocessing because threads use a shared memory area. They don't allocate separate memory area so saves memory, and context-switching between the threads takes less time than process.
 </p>
 <p>Java Multithreading is mostly used in games, animation, etc.</p>
-<hr/>
+<hr/><br>
 <h3 class="h3">Advantages of Java Multithreading</h3>
 <p>1) It <strong>doesn't block the user</strong> because threads are independent and you can perform multiple operations at the same time.</p>
 <p>2) You <strong>can perform many operations together, so it saves time</strong>.</p>
 <p>3) Threads are <strong>independent</strong>, so it doesn't affect other threads if an exception occurs in a single thread.</p>
 <hr/>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-<ins class="adsbygoogle cm_jtp_wtc_responsive" style="display:inline-block" data-ad-client="ca-pub-4699858549023382" data-ad-slot="6746133113"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<h2 class="h2">Multitasking</h2>
+<h2 class="h2">Multitasking</h2><br>
 <p>Multitasking is a process of executing multiple tasks simultaneously. We use multitasking to utilize the CPU.
 Multitasking can be achieved in two ways:</p>
-<ul class="points">
+
 <li>Process-based Multitasking (Multiprocessing)</li>
-<li>Thread-based Multitasking (Multithreading)</li>
-</ul>
+<li>Thread-based Multitasking (Multithreading)</li><br>
 <h3 class="h3">1) Process-based Multitasking (Multiprocessing)</h3>
-<ul class="points">
+
 <li>Each process has an address in memory. In other words, each process allocates a separate memory area.</li>
 <li>A process is heavyweight.</li>
 <li>Cost of communication between the process is high.</li>
 <li>Switching from one process to another requires some time for saving and loading registers, memory maps, updating lists, etc.</li>
-</ul>
+
 <h3 class="h3">2) Thread-based Multitasking (Multithreading)</h3>
 <ul class="points">
 <li>Threads share the same address space.</li>
@@ -98,7 +91,7 @@ Multitasking can be achieved in two ways:</p>
 <li>Cost of communication between the thread is low.</li>
 </ul>
 <h4 class="n">Note: At least one process is required for each thread.</h4>
-<h2 class="h2">What is Thread in java</h2>
+<h2 class="h2">What is Thread in java</h2><br>
 <p>A thread is a lightweight subprocess, the smallest unit of processing. It is a separate path of execution.</p>
 <p>Threads are independent. If there occurs exception in one thread, it doesn't affect other threads. It uses a shared memory area.
 </p>
@@ -106,15 +99,10 @@ Multitasking can be achieved in two ways:</p>
 <p>As shown in the above figure, a thread is executed inside the process. There is context-switching between the threads. There can be multiple processes inside the OS, and one process can have multiple threads.
 </p>
 <h4 class="n">Note: At a time one thread is executed only.</h4>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-<ins class="adsbygoogle cm_jtp_wtc_responsive" style="display:inline-block" data-ad-client="ca-pub-4699858549023382" data-ad-slot="6746133113"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<h2 class="h2">Java Thread class </h2>
+<h2 class="h2">Java Thread class </h2><br>
 <p>Java provides <strong>Thread class</strong> to achieve thread programming. Thread class provides constructors and methods to create and perform operations on a thread. Thread class extends Object class and implements Runnable interface.</p>
-<h2 class="h2">Java Thread Methods</h2>
+<h2 class="h2">Java Thread Methods</h2><br>
 <table class="alt">
 <tr>
 <th>S.N.</th>
@@ -333,7 +321,7 @@ Multitasking can be achieved in two ways:</p>
 <td>It sets the default handler invoked when a thread abruptly terminates due to an uncaught exception.</td>
 </tr>
 </table>
-
+<br><br>
         </div>
 
     </div>
