--- a/erbc.html
+++ b/erbc.html
@@ -24,7 +24,7 @@
                         <div class="dropdown-content">
                           <a href="dbms_overview.html">DBMS</a>
                           <a href="sql-basic.html">PL/SQL</a>
-                          <a href="#">JAVA</a>
+                          <a href="java-basic.html">JAVA</a>
                         </div>
                     </li>
                     <li><a href="service.html">SERVICES</a></li>
