--- a/java-abstract.html
+++ b/java-abstract.html
@@ -42,7 +42,6 @@
             <h2>JAVA</h2>
             <a href="java-basic.html">Java Basic</a>
             <a href="java-control-statement.html">Java Control Statements</a>
-            <a href="java-objectclass.html">Java OOPs Concepts</a>
             <a href="java-inheritance.html">Java Inheritance</a>
             <a href="java-methodoverloading.html">Java Overloading</a>
             <a href="java-abstract.html">Java Abstraction</a>
@@ -59,7 +58,7 @@
         <div class="main">
         <h2>Java Abstraction</h2>
 
-        <h1 class="h1">Abstract class in Java</h1>
+        <h1 class="h1">Abstract class in Java</h1><br>
 <p>A class which is declared with the abstract keyword is known as an abstract class in Java. It can have abstract and non-abstract methods (method with the body).</p>
 <p>Before learning the Java abstract class, let's understand the abstraction in Java first.</p>
 <hr/>
@@ -75,23 +74,18 @@
 <li>Interface (100%)</li>
 </ol>
 <hr/>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
-<ins class="adsbygoogle cm_jtp_wtc_responsive" style="display:inline-block" data-ad-client="ca-pub-4699858549023382" data-ad-slot="6746133113"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<br>
 <h3 class="h2">Abstract class in Java</h3>
 <p>A class which is declared as abstract is known as an <strong>abstract class</strong>. It can have abstract and non-abstract methods. It needs to be extended and its method implemented. It cannot be instantiated.</p>
 <h4 class="h4">Points to Remember</h4>
-<ul class="points">
+
 <li>An abstract class must be declared with an abstract keyword.</li>
 <li>It can have abstract and non-abstract methods.</li>
 <li>It cannot be instantiated.</li>
 <li>It can have constructors and static methods also.</li>
 <li>It can have final methods which will force the subclass not to change the body of the method.</li>
-</ul>
-<img src="https://static.javatpoint.com/images/abstract-class-in-java.jpg" alt="Rules for Java Abstract class" />
+<br>
+<img src="https://static.javatpoint.com/images/abstract-class-in-java.jpg" alt="Rules for Java Abstract class" /><br><br>
 <p><strong>Example of abstract class</strong></p>
 <div class="codeblock"><textarea name="code" class="java">
 abstract class A{}
@@ -218,7 +212,7 @@ Rate of Interest is: 8 %
 compile time error
 </pre></div>
 <h4 class="n">Rule: If you are extending an abstract class that has an abstract method, you must either provide the implementation of the method or make this class abstract.</h4>
-<hr/>
+<hr/><br>
 <h3 class="h2">Another real scenario of abstract class</h3>
 <p>The abstract class can also be used to provide some implementation of the interface. In such case, the end user may not be forced to override all the methods of the interface.</p>
 <h4 id="r">Note: If you are beginner to java, learn interface first and skip this example.</h4>
