--- a/java-array.html
+++ b/java-array.html
@@ -42,7 +42,6 @@
             <h2>JAVA</h2>
             <a href="java-basic.html">Java Basic</a>
             <a href="java-control-statement.html">Java Control Statements</a>
-            <a href="java-objectclass.html">Java OOPs Concepts</a>
             <a href="java-inheritance.html">Java Inheritance</a>
             <a href="java-methodoverloading.html">Java Overloading</a>
             <a href="java-abstract.html">Java Abstraction</a>
@@ -59,37 +58,30 @@
         <div class="main">
         <h2>Java Arrays</h2>
 
-        <h1 class="h1">Java Arrays</h1>
+        <h1 class="h1">Java Arrays</h1><br>
 <p>Normally, an array is a collection of similar type of elements which has contiguous memory location.</p>
 <p><strong>Java array</strong> is an object which contains elements of a similar data type. Additionally, The elements of an array are stored in a contiguous memory location. It is a data structure where we store similar elements. We can store only a fixed set of elements in a Java array.</p>
 <p>Array in Java is index-based, the first element of the array is stored at the 0th index, 2nd element is stored on 1st index and so on. </p>
 <p>Unlike C/C++, we can get the length of the array using the length member. In C/C++, we need to use the sizeof operator. </p>
 <p>In Java, array is an object of a dynamically generated class. Java array inherits the Object class, and implements the Serializable as well as Cloneable interfaces. We can store primitive values or objects in an array in Java. Like C/C++, we can also create single dimentional or multidimentional arrays in Java.</p>
-<p>Moreover, Java provides the feature of anonymous arrays which is not available in C/C++.</p>
+<p>Moreover, Java provides the feature of anonymous arrays which is not available in C/C++.</p><br>
 <h3 class="h3">Advantages</h3>
-<ul class="points">
+
 <li><strong>Code Optimization:</strong> It makes the code optimized, we can retrieve or sort the data efficiently.</li>
 <li><strong>Random access:</strong> We can get any data located at an index position.</li>
-</ul>
+<br>
 <h3 class="h3">Disadvantages</h3>
-<ul class="points">
-<li><strong>Size Limit:</strong> We can store only the fixed size of elements in the array. It doesn't grow its size at runtime. To solve this problem, collection framework is used in Java which grows automatically.</li>
-</ul>
-<hr/>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-<ins class="adsbygoogle cm_jtp_wtc_responsive" style="display:inline-block" data-ad-client="ca-pub-4699858549023382" data-ad-slot="6746133113"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<h3 class="h2">Types of Array in java</h3>
+<li><strong>Size Limit:</strong> We can store only the fixed size of elements in the array. It doesn't grow its size at runtime. To solve this problem, collection framework is used in Java which grows automatically.</li>
+
+<hr/><br>
+<h3 >Types of Array in java</h3>
 <p>There are two types of array.</p>
-<ul>
+
 <li>Single Dimensional Array</li>
 <li>Multidimensional Array</li>
-</ul>
 <hr/>
-<h2 class="h2">Single Dimensional Array in Java</h2>
+<h2 class="h2">Single Dimensional Array in Java</h2><br>
 <p><strong>Syntax to Declare an Array in Java</strong></p>
 <div class="codeblock"><textarea name="code" class="java">
 dataType[] arr; (or)
@@ -99,7 +91,7 @@ dataType arr[];
 <p><strong>Instantiation of an Array in Java</strong></p>
 <div class="codeblock"><textarea name="code" class="java">
 arrayRefVar=new datatype[size];
-</textarea></div>
+</textarea></div><br>
 <h3 class="h3ex">Example of Java Array</h3>
 <p>Let's see the simple example of java array, where we are going to declare, instantiate, initialize and traverse an array.</p>
 <div class="codeblock"><textarea name="code" class="java">
@@ -276,8 +268,8 @@ Exception in thread "main" java.lang.ArrayIndexOutOfBoundsException: 4
 80
 </pre></div>
 <hr/>
-<h2 class="h2">Multidimensional Array in Java</h2>
-<p>In such case, data is stored in row and column based index (also known as matrix form).</p>
+<h2 class="h2">Multidimensional Array in Java</h2><br>
+<p>In such case, data is stored in row and column based index (also known as matrix form).</p><br>
 <p><strong>Syntax to Declare Multidimensional Array in Java</strong></p>
 <div class="codeblock"><textarea name="code" class="java">
 dataType[][] arrayRefVar; (or)
