--- a/java-awt.html
+++ b/java-awt.html
@@ -42,7 +42,6 @@
             <h2>JAVA</h2>
             <a href="java-basic.html">Java Basic</a>
             <a href="java-control-statement.html">Java Control Statements</a>
-            <a href="java-objectclass.html">Java OOPs Concepts</a>
             <a href="java-inheritance.html">Java Inheritance</a>
             <a href="java-methodoverloading.html">Java Overloading</a>
             <a href="java-abstract.html">Java Abstraction</a>
@@ -59,16 +58,16 @@
         <div class="main">
         <h2>Java AWT</h2>
 
-        <h1 class="h1">Java AWT Tutorial</h1>
+        <h1 class="h1">Java AWT </h1><br>
 <p><strong>Java AWT</strong> (Abstract Window Toolkit) is <em>an API to develop Graphical User Interface (GUI) or windows-based applications</em> in Java.</p>
 <p>Java AWT components are platform-dependent i.e. components are displayed according to the view of operating system. AWT is heavy weight i.e. its components are using the resources of underlying operating system (OS).</p>
 <p>The java.awt package provides classes for AWT API such as TextField, Label, TextArea, RadioButton, CheckBox, Choice, List etc.</p>
 <p>The AWT tutorial will help the user to understand Java GUI programming in simple and easy steps.</p>
-<h2 class="h2">Why AWT is platform independent?</h2>
+<h2 class="h2">Why AWT is platform independent?</h2><br>
 <p>Java AWT calls the native platform calls the native platform (operating systems) subroutine for creating API components like TextField, ChechBox, button, etc.</p>
 <p>For example, an AWT GUI with components like TextField, label and button will have different look and feel for the different platforms like Windows, MAC OS, and Unix. The reason for this is the platforms have different view for their native components and AWT directly calls the native subroutine that creates those components.</p>
 <p>In simple words, an AWT application will look like a windows application in Windows OS whereas it will look like a Mac application in the MAC OS.</p>
-<h2 class="h2">Java AWT Hierarchy</h2>
+<h2 class="h2">Java AWT Hierarchy</h2><br>
 <p>The hierarchy of Java AWT classes are given below.</p>
 <img src="https://static.javatpoint.com/java/awt/images/java-awt.png" alt="Java AWT Tutorial" />
 <h3 class="h3">Components</h3>
@@ -99,13 +98,13 @@
 <tr><td>public void setLayout(LayoutManager m)</td><td>Defines the layout manager for the component.</td></tr>
 <tr><td>public void setVisible(boolean status)</td><td>Changes the visibility of the component, by default false.</td></tr>
 </table>
-<h2 class="h2">Java AWT Example</h2>
+<h2 class="h2">Java AWT Example</h2><br>
 <p>To create simple AWT example, you need a frame. There are two ways to create a GUI using Frame in AWT.</p>
 <ol class="points">
 <li>By extending Frame class (<strong>inheritance</strong>)</li>
 <li>By creating the object of Frame class (<strong>association</strong>)</li>
 </ol>
-<h2 class="h2">AWT Example by Inheritance</h2>
+<h2 class="h2">AWT Example by Inheritance</h2><br>
 <p>Let's see a simple example of AWT where we are inheriting Frame class. Here, we are showing Button component on the Frame.</p>
 <p><strong>AWTExample1.java</strong></p>
 <div class="codeblock"><textarea name="code" class="java">
@@ -211,8 +210,8 @@ AWTExample2 awt_obj = new AWTExample2();
 
 }  
 
+<br><br>
         </div>
-
     </div>
     <script src="script.js"></script>
 </body>
