--- a/java-package.html
+++ b/java-package.html
@@ -42,7 +42,6 @@
             <h2>JAVA</h2>
             <a href="java-basic.html">Java Basic</a>
             <a href="java-control-statement.html">Java Control Statements</a>
-            <a href="java-objectclass.html">Java OOPs Concepts</a>
             <a href="java-inheritance.html">Java Inheritance</a>
             <a href="java-methodoverloading.html">Java Overloading</a>
             <a href="java-abstract.html">Java Abstraction</a>
@@ -59,17 +58,17 @@
         <div class="main">
         <h2>Java Package</h2>
 
-        <h1 class="h1">Java Package</h1>
+        <h1 class="h1">Java Package</h1><br>
 <p>A <b>java package</b> is a group of similar types of classes, interfaces and sub-packages.
 </p>
 <p>Package in java can be categorized in two form, built-in package and user-defined package. </p>
 <p>There are many built-in packages such as java, lang, awt, javax, swing, net, io, util, sql etc.</p>
 <p>Here, we will have the detailed learning of creating and using user-defined packages.
 </p>
-<h2 class="h4">Advantage of Java Package</h2>
+<h2 class="h4">Advantage of Java Package</h2><br>
 <p>1) Java package is used to categorize the classes and interfaces so that they can be easily maintained.</p>
 <p>2) Java package provides access protection.</p>
-<p>3) Java package removes naming collision.</p>
+<p>3) Java package removes naming collision.</p><br>
 <img src="https://static.javatpoint.com/images/package.JPG" alt="package in java" title="package" />
 <hr/>
 <a id="packageex"></a>
@@ -213,10 +212,10 @@ Output:Hello
 <img src="https://static.javatpoint.com/images/sequenceofpackage.JPG" alt="sequence of package" title="sequence of package" />
 <hr/>
 <a id="packagesub"></a>
-<h2 class="h2">Subpackage in java</h2>
+<h2 class="h2">Subpackage in java</h2><br>
 <p>Package inside the package is called the <b>subpackage</b>. It should be created <b>to categorize the package further</b>.</p>
 <p> Let's take an example, Sun Microsystem has definded a package named java that contains many classes like System, String, Reader, Writer, Socket etc. These classes represent a particular group e.g. Reader and Writer classes are for Input/Output operation, Socket and ServerSocket classes are for networking etc and so on. So, Sun has subcategorized the java package into subpackages such as lang, net, io etc. and put the Input/Output related classes in io package, Server and ServerSocket classes in net packages and so on.</p>
-<h4 id="n">The standard of defining package is domain.company.package e.g. com.javatpoint.bean or org.sssit.dao.</h4>
+<h4 id="n">The standard of defining package is domain.company.package e.g. com.javatpoint.bean or org.sssit.dao.</h4><br>
 <h3 class="h3ex">Example of Subpackage</h3>
 <div class="codeblock"><textarea name="code" class="java">
 package com.javatpoint.core;
@@ -266,23 +265,17 @@ Output:Welcome to package
 <hr/>
 <a id="packagewaystoload"></a>
 <h3 class="h3">Ways to load the class files or jar files</h3>
-<table>
+
 <tr><td>There are two ways to load the class files temporary and permanent.</td></tr>
-</table>
-<ul>
 <li>Temporary
-<ul>
 <li>By setting the classpath in the command prompt</li>
 <li>By -classpath switch</li>
-</ul>
+
 </li>
 <li>Permanent
-<ul>
 <li>By setting the classpath in the environment variables</li>
 <li>By creating the jar file, that contains all the class files, and copying the jar file in the jre/lib/ext folder. </li>
-</ul>
 </li>
-</ul>
 <hr/>
 <h4 class="n">Rule: There can be only one public class in a java source file and it must be saved by the public class name.</h4>
 <div class="codeblock"><textarea name="code" class="java">
@@ -312,7 +305,7 @@ public class A{}
 package javatpoint;
 public class B{}
 
-</textarea></div>
+</textarea></div><br><br>
         </div>
 
     </div>
